--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body style="margin: 0">
   <div id="drawing"></div>
   <canvas id="canvas"></canvas>
+  <script src="./utils.js"></script>
   <script src="./index.js"></script>
 </body>
 
