--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body style="margin: 0">
   <div id="drawing"></div>
   <canvas id="canvas"></canvas>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.2/dat.gui.js"></script>
   <script src="./utils.js"></script>
   <script src="./index.js"></script>
 </body>
