--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <html>
 
 <head>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/2.6.3/svg.js"></script>
 </head>
 
 <body style="margin: 0">
   <div id="drawing"></div>
   <canvas id="canvas"></canvas>
+  <div style="position: fixed; top:10; left:10">
+  	<p id="alpha">Not supported</p>
+  	<p id="beta"></p>
+  	<p id="gamma"></p>
+  	<p id="mouseX"></p>
+  	<p id="mouseY"></p>
+  </div>
+
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.2/dat.gui.js"></script>
   <script src="./gyronorm.complete.min.js"></script>
   <script src="./utils.js"></script>
